--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,9 @@
         <div class="animate form login_form">
           <section class="login_content">
             <form>
-              <h1>Login Form</h1>
+              <h1 highlight>Login Form</h1>
+              <app-title [subtitle]="subtitle"></app-title>
+              <app-contact></app-contact>
               <div>
                 <input type="text" class="form-control" placeholder="Username" required="" />
               </div>
