--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-.login_conten form {
+/*.login_conten form {
     margin: 20px 0;
     position: relative;
 }
@@ -1323,5 +1323,5 @@ ul.project_files li a i{width:20px}
 }
 @keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0deg)}
 100%{-webkit-transform:rotate(359deg);transform:rotate(359deg)}
-}
+}*/
 
