--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--<h1>{{title}}</h1>
 <app-header></app-header>-->
 <router-outlet></router-outlet>
+<script src="../build/js/custom.min.js"></script>
